[package]
name = "erlang_rs"
description = "Erlang External Term Format for Rust"
version = "2.0.6"
edition = "2021"
rust-version = "1.56.1"
license = "MIT"
authors = ["Michael Truog <mjtruog@protonmail.com>"]
repository = "https://github.com/okeuday/erlang_rs"
readme = "README.markdown"
keywords = ["erlang", "elixir"]
categories = ["encoding", "parser-implementations"]

[lib]
name = "erlang"

[dependencies]
